--- a/css/styles.css
+++ b/css/styles.css
@@ -50,9 +50,22 @@ ul {
   max-width: 360px;
 }
 
+.navbar .nav {
+  width: 100%;
+}
+
 .navbar .nav > li > a {
-  padding-left: 30px;
-  padding-right: 30px;
+  padding-left:  28px;
+  padding-right: 28px;
+}
+
+.nav > li:last-child {
+  float: right;
+}
+
+.nav > li:last-child > a {
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .nav-phone {
@@ -93,4 +106,11 @@ ul {
     margin: 10px auto 0;
   }
 
+  .nav > li:last-child {
+    float: none;
+  }
+  .nav > li:last-child > a{
+    padding-left:  28px;
+    padding-right: 28px;
+  }
 }
