--- a/css/styles.css
+++ b/css/styles.css
@@ -3,13 +3,23 @@ body {
 }
 
 h2 {
+  margin-top: 10px;
   margin-bottom: 5px;
   font-size: 16px;
   font-weight: 600;
   line-height: 20px;
 }
+
+h2:first-child {
+  margin-top: 0;
+}
+
 p {
   margin: 0 0 20px;
+}
+
+img.banner {
+  margin-bottom: 20px;
 }
 
 address {
